deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: northwind-deployment
  labels:
    app: northwind-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: northwind-deployment
  template:
    metadata:
      labels:
        app: northwind-deployment
    spec:
      containers:
      - name: northwind
        image: northwind:v2
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: northwind-mongo
  labels:
    app: northwind-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: northwind-mongo
  template:
    metadata:
      labels:
        app: northwind-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
