service.yaml
apiVersion: v1
kind: Service
metadata:
  name: northwind-service
spec:
  selector:
    app: northwind-deployment
  ports:
    - protocol: TCP
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: northwind-mongo-service
spec:
  selector:
    app: northwind-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
