northwind-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: northwind-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: northwind-service
      port:
        number: 8000
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: northwind-service
            port:
              number: 8000
